# llm_manipulator_integration

./: launch_script.sh
bringup/: CMakeLists.txt  package.xml
bringup/launch/: ur_bringup.launch
central_client/: CMakeLists.txt  package.xml
central_client/scripts/: central_client.py  central_client.py.bak  central_client_new.py  central_client_v2.py  central_client_v3.py  clean_client.py  llm_test_output_rice_bowl.txt  motion_planning_client.py  motion_planning_client_rice_bowl.py  move_preaction.py  mpick_client.py  output.txt  sample_api_v2.py  sample_api_v3.py  speech_to_text.py  test_llm_vision_v2.py  text_to_speech.py
deprojection_pipeline/: CMakeLists.txt  package.xml
deprojection_pipeline/launch/: bringup.launch  darknet_yolov3.launch  perception.launch
deprojection_pipeline/msg/: ObjectPositions.msg
deprojection_pipeline/rviz/: fiducial1_viz.rviz  fiducial2_viz.rviz  fiducial_viz.rviz  orange_position_test.rviz
deprojection_pipeline_msgs/: CMakeLists.txt  package.xml
final_pkg/: CMakeLists.txt  package.xml
final_pkg/scripts/: Try.py  (+5 more)
motion_planning_server/: CMakeLists.txt  package.xml
motion_planning_server_msgs/: CMakeLists.txt  package.xml
my_moveit_planner/: CMakeLists.txt  package.xml
my_moveit_planner/action/: Final.action  New.action  Pick.action
my_moveit_planner/launch/: complete.launch
my_moveit_planner/scripts/: Final_action.py  Final_client.py  action_client.py  action_server.py  ex_ptstmpd.py  pick_place.py  plan_to_object.py  point_stampd.py  task_server.py
object_detection_localization/: CMakeLists.txt  package.xml
(+34 files in other folders)
